--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -12,14 +13,15 @@
         <link rel="stylesheet" href="index.css">
         <!-- google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+        <title>Tinder for Dogs</title>
     </head>
     <body>
         <header>
             <div class="header">
                 <ul>
-                    <li><img src="images/icon-profile.png" alt="header-icon"></li>
-                    <li><img src="images/logo.png" alt="header-icon" class="logo"></li>
-                    <li><img src="images/icon-chat.png" alt="header-icon"></li>
+                    <li><img src="images/icon-profile.png" alt="profile-icon"></li>
+                    <li><img src="images/logo.png" alt="logo-icon" class="logo"></li>
+                    <li><img src="images/icon-chat.png" alt="chat-icon"></li>
                 </ul>
             </div>
         </header>
@@ -27,15 +29,15 @@
             <div class="profile" id="profile">
                 <!-- Profile here -->
             </div>
-                <div class="badges">
-                    <img src="images/badge-like.png" alt="like badge" class="like-badge hide" id="like-badge">
-                    <img src="images/badge-nope.png" alt="nope badge" class="nope-badge hide" id="nope-badge">
-                </div>
-            </div>
+            <div class="badges">
+                <img src="images/badge-like.png" alt="like badge" class="like-badge hide" id="like-badge">
+                <img src="images/badge-nope.png" alt="nope badge" class="nope-badge hide" id="nope-badge">
+           </div>
+            
             
             <div class="buttons">
-                <button class="cross-btn" id="cross-btn"><img src="images/icon-cross.png"></button>
-                <button class="like-btn" id="like-btn"><img src="images/icon-heart.png"></button>
+                <button class="cross-btn" id="cross-btn"><img src="images/icon-cross.png" alt="hate icon"></button>
+                <button class="like-btn" id="like-btn"><img src="images/icon-heart.png" alt="heart icon"></button>
             </div>
         </main>
         <script src="/index.js" type="module"></script>
